# open_ai

./: .gitignore  LICENCE  README.md  install.sh  pyproject.toml  requirements.txt
open_ai/: __init__.py  chat_bot.py  chat_gpt.py  dall_e.py  gpt_turbo.py  image_bot.py  open_ai.py
scripts/: chat_bot_cli.py  image_bot_cli.py
tests/: test_open_ai.py
