[project]
name = "open_ai"
version = "0.2.0"
description = "A python wrapper for open AI."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
    { name = "ajrlewis", email = "hello@ajrlewis.com" }
]
dependencies = [
    "openai==1.6.1",
    "requests==2.31.0",
    "python-dotenv==1.0.0",
]

[tool.setuptools]
packages = ["open_ai/", "scripts/", "tests/"]
